# atom_analysis_manual

./: .gitignore  FINAL_AUDIT.md  IMPLEMENTATION_PLAN.md  README.md  environment.yml  pyproject.toml  setup_windows.ps1
docs/: local_affine_strain_plan.md
examples/: sample_data_placeholder.md
notebooks/: 01_Findatom.ipynb  02_Simple_quantitative_spacing_analysis.ipynb  03_Cropped_group_centroid_analysis.ipynb  03b_Visualize_saved_group_displacements.ipynb  04_Disk_integrated_intensity_mapping.ipynb
scripts/: build_01_findatom_notebook.py  build_02_simple_quant_notebook.py  build_03_cropped_group_centroid_notebook.py  build_04_disk_integrated_intensity_notebook.py  run_interactive_analysis_pipeline.py
tests/: test_active_session.py  test_candidate_review.py  test_classification.py  test_detect.py  test_export.py  test_intensity.py  test_io.py  test_io_calibration.py  test_local_affine_strain_session.py  test_metrics.py  test_multichannel.py  test_notebook02_exports.py  test_notebook04_stack_export.py  test_notebook_02_simple_quant_smoke.py  test_notebook_04_disk_intensity_smoke.py  test_notebook_smoke.py  test_plotting.py  test_preprocess.py  test_raw_direct.py  test_reference_lattice.py  test_reference_suggestion.py  test_refine.py  test_refined_stack_intensity.py  test_session_strain_storage.py  test_session_workflow.py  test_simple_quant.py  test_simple_quant_plotting.py  test_stack_intensity.py  test_stack_intensity_plotting.py  test_stack_io.py  test_stack_refinement.py  test_strain_api.py  test_strain_export.py  test_strain_kernel.py  test_strain_plotting.py  (+4 more)
(+30 files in other folders)
